udpated meta info

--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -7,8 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Agent City Hall - An interactive platform for urban development proposals and community feedback. Explore zoning changes, simulate public responses, and visualize community sentiment through LLM-powered agents."
     />
+    <meta name="keywords" content="urban planning, zoning, city development, community feedback, public opinion, AI simulation" />
+    <meta name="author" content="Chance Jiajie Li @ MIT City Science" />
+    <meta property="og:title" content="Agent City Hall" />
+    <meta property="og:description" content="Interactive urban development proposal platform with AI-powered community feedback simulation" />
+    <meta property="og:type" content="website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>BPDA Public Commentsp</title>
+    <title>Agent City Hall</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
